--- a/package.json
+++ b/package.json
@@ -33,13 +33,14 @@
     "test": "grunt test"
   },
   "devDependencies": {
-    "grunt": "^0.4.4",
-    "grunt-contrib-jshint": "^0.10.0",
-    "grunt-contrib-clean": "^0.5.0",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-contrib-connect": "^0.7.1",
     "browserify": "^3.46.1",
     "exorcist": "^0.1.6",
+    "grunt": "^0.4.4",
+    "grunt-contrib-clean": "^0.5.0",
+    "grunt-contrib-connect": "^0.7.1",
+    "grunt-contrib-jshint": "^0.10.0",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-ts": "^1.11.2",
     "minifyify": "^2.4.1"
   }
 }
