--- a/package.json
+++ b/package.json
@@ -1,34 +1,34 @@
 {
   "private": true,
-  "name": "framebufferJS",
-  "version": "0.2.0",
-  "description": "framebuffer abstraction build on top of Canvas",
+  "name": "lorez",
+  "version": "0.0.1",
+  "description": "Low-res bitmap render engine",
   "keywords": [
     "framebuffer",
     "canvas",
     "low-res",
     "gamejam"
   ],
-  "homepage": "https://github.com/noffle/framebufferJS",
+  "homepage": "https://github.com/Bartvds/lorez",
   "repository": {
     "type": "git",
-    "url": "https://github.com/noffle/framebufferJS.git"
+    "url": "https://github.com/Bartvds/lorez.git"
   },
   "author": {
-    "name": "Stephen Whitmore",
-    "url": "https://github.com/noffle"
+    "name": "Bart van der Schoor",
+    "url": "https://github.com/Bartvds"
   },
   "bugs": {
-    "url": "https://github.com/noffle/framebufferJS/issues"
+    "url": "https://github.com/Bartvds/lorez/issues"
   },
   "license": {
     "type": "MIT",
-    "url": "https://raw.github.com/noffle/framebufferJS/master/LICENSE-MIT"
+    "url": "https://raw.github.com/Bartvds/lorez/master/LICENSE-MIT"
   },
   "engines": {
     "node": ">= 0.10.0 < 0.11.0"
   },
-  "main": "./lib/suite.js",
+  "main": "./dist/lorez.js",
   "scripts": {
     "test": "grunt test"
   },
@@ -41,6 +41,6 @@
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-ts": "^1.11.2",
-    "minifyify": "^2.4.1"
+    "typescript": "^1.0.1"
   }
 }
