prepping for gh-pages

--- a/package.json
+++ b/package.json
@@ -38,8 +38,10 @@
     "grunt": "^0.4.4",
     "grunt-contrib-clean": "^0.5.0",
     "grunt-contrib-connect": "^0.7.1",
+    "grunt-contrib-copy": "^0.5.0",
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-contrib-watch": "^0.6.1",
+    "grunt-gh-pages": "^0.9.1",
     "grunt-ts": "^1.11.2",
     "grunt-tslint": "^0.4.1",
     "tslint-path-formatter": "^0.1.1",
