--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,11 @@
 language: node_js
 node_js:
   - "0.10"
-
+script:
+- grunt test
+# - grunt deploy
+branches:
+  only:
+  - master
 before_install:
   - npm install -g grunt-cli
