--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,6 @@ node_js:
   - "0.10"
 script:
 - grunt test
-# - grunt deploy
-branches:
-  only:
-  - master
+- grunt deploy
 before_install:
   - npm install -g grunt-cli
